[gd_scene load_steps=2 format=3 uid="uid://cn3fr4hhf5lrl"]

[ext_resource type="Script" path="res://scenes/settlement_area.gd" id="1_mpc0n"]

[node name="SettlementArea" type="Area2D"]
script = ExtResource("1_mpc0n")

[connection signal="child_entered_tree" from="." to="." method="_on_child_entered_tree"]
[connection signal="input_event" from="." to="." method="_on_input_event"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
